--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "npm-run-all2": "^7.0.2",
         "prettier": "3.5.3",
         "rollup-plugin-visualizer": "^5.14.0",
+        "terser": "^5.44.0",
         "typescript": "~5.8.0",
         "unplugin-auto-import": "^19.1.2",
         "unplugin-vue-components": "^28.4.1",
