feat: 手动部署到阿里云，修改环境变量的项目baseUrl

--- a/.env.prod
+++ b/.env.prod
@@ -1,4 +1,7 @@
 VITE_API_URL=https://prod.api.com
 VITE_OUTPUT_DIR=prod
 # 部署github 这里对应项目的名称
-VITE_BASE_URL=/git_action_demo/
+# VITE_BASE_URL=/git_action_demo/
+
+# 部署到来源
+VITE_BASE_URL=/vite-test/
