feat(scripts): 添加部署shell脚本及 npm 部署命令
新增 `deploy.sh` 部署脚本，用于自动化打包并部署前端项目到远程服务器。
同时在 `package.json` 中添加 `deploy:unix` 和 `deploy:win` 两个部署命令，
分别用于 Unix 和 Windows 环境下执行部署流程。

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "type-check": "vue-tsc --build",
         "lint": "eslint . --fix",
         "format": "prettier --write src/",
-        "prepare": "husky"
+        "prepare": "husky",
+        "deploy:unix": "sh ./scripts/deploy.sh",
+        "deploy:win": "\"D:\\soft\\Git\\bin\\sh.exe\" ./scripts/deploy.sh"
     },
     "dependencies": {
         "axios": "^1.8.4",
